# simulador_contagio

./: .gitignore  CMakeLists.txt  README.md  grafo.cpp
img/: README.md
src/: estado.hpp  grafo.hpp  main.cpp  propiedad.hpp
